# Seract

./: README.md  Wear_and_Tear_YOLO_Try.ipynb
SO-100-arm/config/: controllers.yaml  controllers_5dof.yaml  controllers_7dof.yaml  joint_limits.yaml  ros2_controllers.yaml  so_100_arm.ros2_control.xacro  so_100_arm.urdf.xacro
SO-100-arm/launch/: hardware.launch.py  ros2_control_bringup.launch.py  seract_stack.launch.py
obj_bbox/: package.xml  setup.cfg  setup.py
obj_bbox/obj_bbox/: obj_bbox.py  yolo_bbox.py
seract_pipeline/: CAMERA_CALIBRATION.md  package.xml  setup.cfg  setup.py
seract_pipeline/config/: pipeline.yaml
seract_pipeline/launch/: mock_stack.launch.py
seract_pipeline/scripts/: compute_camera_pose.py  find_camera_pose.sh  find_camera_pose_interactive.py  publish_camera_tf.sh
seract_pipeline/seract_pipeline/: calib_helper.py  logging_utils.py  pipeline.py  usb_camera_node.py
seract_pipeline/seract_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
seract_policy_control/: --single-version-externally-managed  README.md  package.xml  setup.cfg  setup.py
seract_policy_control/config/: policy_control.yaml  so101_robot_config.py
seract_policy_control/launch/: joint_jogger.launch.py  orch.launch.py  policy_bridge.launch.py  policy_control.launch.py  run_policy_or_moveit.launch.py  run_stack.launch.py
seract_policy_control/resource/: seract_policy_control
seract_policy_control/scripts/: rerun_visualizer.py  run_policy_controller.sh
seract_policy_control/seract_policy_control/: joint_jogger.py  lerobot_policy_controller.py  policy_bridge.py  safety.py
seract_policy_control/seract_policy_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
so101_motion/: package.xml  setup.cfg  setup.py
so101_motion/so101_motion/: decision.json  decision_movement_action_server.py  joint_tracking_monitor.py  pick_place_node.py  scanning_motion.py
so101_motion_interfaces/: CMakeLists.txt  package.xml
so101_motion_interfaces/action/: DecisionAct.action
so_arm_100_hardware/: CMakeLists.txt
so_arm_100_hardware/config/: hardware_config.yaml
so_arm_100_hardware/scripts/: calibrate_arm.py  get_current_joints.py  reset_to_mid  reset_to_mid.py
so_arm_100_hardware/src/: so_arm_100_interface.cpp
vision_inspection/: package.xml  setup.cfg  setup.py
vision_inspection/vision_inspection/: detection_pipeline.py  openai_detector.py  quality_gate.py  vision_inspection_node.py
web_ui/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
(+14 files in other folders)
