<?xml version="1.0"?>
<package format="3">
  <name>so101_motion_interfaces</name>
  <version>0.0.0</version>
  <description>Interfaces for so101_motion</description>
  <maintainer email="prazy391@gmail.com">gixadmin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
