<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_inspection</name>
  <version>0.0.0</version>
  <description>Vision inspection pipeline for defect detection</description>
  <maintainer email="prazy391@gmail.com">gixadmin</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Python dependencies (install via pip):
       - watchdog (for file monitoring)
       - numpy (usually pre-installed)
       - scikit-image (for morphology operations)
       - mediapipe (optional, for hand detection)
       - ultralytics (optional, for YOLO)
       - openai (optional, for OpenAI Vision API - enabled by default) -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
